tests/integrations/basic/tests/actual_tests/joined_above.rs
#![deny(unused_mut, unused_variables)]

fn main() {
    //~| unused_mut
    //~v unused_variables
    let mut x = 0u32;
}
